# machine-learning-exercises

inference-server/: Cargo.toml  Rocket.toml
inference-server/src/: appsettings.rs  chatbot.rs  main.rs
pyextensions/: hello.cpp  main.py  setup.py
